--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ hs_err_pid*
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/dictionaries
+.idea/vcs.xml # added by Aidan
 
 # Sensitive or high-churn files:
 .idea/**/dataSources/
