--- a/.gitignore
+++ b/.gitignore
@@ -121,3 +121,20 @@ tags
 .updatereadme.sh
 
 /target
+
+### Maven ###
+# Created by https://www.gitignore.io/api/maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+
+# Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
+!/.mvn/wrapper/maven-wrapper.jar
+
+# End of https://www.gitignore.io/api/maven
