Made maven complain again

--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,8 @@
             <groupId>jfugue</groupId>
             <artifactId>jfugue</artifactId>
             <version>5.0.9</version>
-            <scope> compile </scope>
+            <scope> system</scope>
+            <systemPath>${basedir}/src/lib/jfugue-5.0.9.jar</systemPath>
         </dependency>
     </dependencies>
     <build>
