nitpick standard directory naming

--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
             <artifactId>jfugue</artifactId>
             <version>5.0.9</version>
             <scope> system</scope>
-            <systemPath>${basedir}/lib/jfugue-5.0.9.jar</systemPath>
+            <systemPath>${basedir}/libs/jfugue-5.0.9.jar</systemPath>
         </dependency>
     </dependencies>
     <build>
