--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>groupId</groupId>
+    <groupId>chord-app</groupId>
     <artifactId>chord-app-v2</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
@@ -18,12 +18,31 @@
             <groupId>jfugue</groupId>
             <artifactId>jfugue</artifactId>
             <version>5.0.9</version>
-            <scope> system</scope>
-            <systemPath>${basedir}/libs/jfugue-5.0.9.jar</systemPath>
+            <scope> compile </scope>
         </dependency>
     </dependencies>
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-install-plugin</artifactId>
+                <version>2.5.2</version>
+                <executions>
+                    <execution>
+                        <phase>initialize</phase>
+                        <goals>
+                            <goal>install-file</goal>
+                        </goals>
+                        <configuration>
+                            <groupId>jfugue</groupId>
+                            <artifactId>jfugue</artifactId>
+                            <version>5.0.9</version>
+                            <packaging>jar</packaging>
+                            <file>${basedir}/libs/jfugue-5.0.9.jar</file>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
