--- a/pom.xml
+++ b/pom.xml
@@ -75,11 +75,18 @@
             </plugin>
         </plugins>
     </build>
+    <reporting>
+        <plugins>
+          <plugin>
+            <!-- JUnit code coverage. -->
+            <!-- Call with  mvn cobertura:cobertura -->		  
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>cobertura-maven-plugin</artifactId>
+            <version>2.6</version>
+          </plugin>
+        </plugins>
+      </reporting>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
-
-
-
 </project>
