--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
             <version>5.0.9</version>
             <scope> compile </scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>2.12.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
